src/containers/blog/detail.module.scss
@import '../../styles/common';

.container {
	max-width: 1027px;
	border: 1px solid $ts-cream;
	border-radius: 24px;
	overflow: hidden;
}

.imageContainer {
	position: relative;
	width: 100%;
	height: calc((100vw - 200px) * 0.4533);
	max-height: 465px;
}

.row {
	display: flex;
	flex-direction: column;
	@media (min-width: $breakpoint-md) {
		flex-direction: row;
		align-items: stretch;
	}
}

.cell {
	padding: 24px;
}

.main {
	@extend .cell;
	flex-grow: 0;
}

.date {
	font-size: 16px;
	font-weight: 600;
	line-height: 19px;
	color: $ts-red;
}

.teaser {
	font-size: 24px;
	line-height: 29.05px;
	color: $ts-midTone;
	margin-bottom: 16px;
}

.duration {
	color: $ts-midTone;
}

.rule {
	margin-top: 16px;
	margin-bottom: 16px;
	border-bottom: 0.5px solid $ts-lightTone;
}

.article {
	font-family: $serif;

	p,
	li {
		font-size: 15px;
		line-height: 22.25px;
	}
	a {
		color: $ts-red;
	}
	blockquote {
		margin: 0;
		border-left: 0.5px solid $ts-red;
		padding-left: 16px;
	}
}

.sidebar {
	@extend .cell;

	border-left: 1px solid $ts-cream;

	@media (min-width: $breakpoint-md) {
		flex: 0 0 33%;
	}
}

.cards {
	margin-top: 16px;
}

